@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5012 2004/02/26 22:56:56 agc Exp $
+$NetBSD: CHANGES,v 1.5013 2004/02/27 00:22:07 ben Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1064,3 +1064,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added py-IndexedCatalog-0.6.0 [minskim 2004-02-26]
 	Added jigdo-0.7.0 [agc 2004-02-26]
 	Updated SDL_gfx to 2.0.10 [ben 2004-02-26]
+	Updated mklivecd to 0.2 [xtraeme 2004-02-27]
